2016-06-05  Anders Carlsson  <andersca@apple.com>

        Attempt to fix plug-in hangs by adding back empty slots for the removed messages.

        * Plugins/Hosted/WebKitPluginClient.defs:
        * Plugins/Hosted/WebKitPluginHost.defs:

2016-06-04  Anders Carlsson  <andersca@apple.com>

        Remove NPSPI that is no longer used
        https://bugs.webkit.org/show_bug.cgi?id=158384

        Reviewed by Sam Weinig.

        * Configurations/WebKitLegacy.xcconfig:
        * Plugins/Hosted/NetscapePluginHostProxy.mm:
        (WKPCCheckIfAllowedToLoadURL): Deleted.
        (WKPCCancelCheckIfAllowedToLoadURL): Deleted.
        (WKPCResolveURL): Deleted.
        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::NetscapePluginInstanceProxy): Deleted.
        (WebKit::NetscapePluginInstanceProxy::checkIfAllowedToLoadURL): Deleted.
        (WebKit::NetscapePluginInstanceProxy::cancelCheckIfAllowedToLoadURL): Deleted.
        (WebKit::NetscapePluginInstanceProxy::checkIfAllowedToLoadURLResult): Deleted.
        (WebKit::NetscapePluginInstanceProxy::resolveURL): Deleted.
        * Plugins/Hosted/WebHostedNetscapePluginView.h:
        * Plugins/Hosted/WebHostedNetscapePluginView.mm:
        (-[WebHostedNetscapePluginView _webPluginContainerCancelCheckIfAllowedToLoadRequest:]): Deleted.
        (-[WebHostedNetscapePluginView _containerCheckResult:contextInfo:]): Deleted.
        * Plugins/Hosted/WebKitPluginClient.defs:
        * Plugins/WebBaseNetscapePluginView.h:
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView resolvedURLStringForURL:target:]): Deleted.
        * Plugins/WebNetscapeContainerCheckContextInfo.h: Removed.
        * Plugins/WebNetscapeContainerCheckContextInfo.mm: Removed.
        (-[WebNetscapeContainerCheckContextInfo initWithCheckRequestID:callbackFunc:context:]): Deleted.