@@ -1,3 +1,15 @@
+2016-06-07  Alex Christensen  <achristensen@webkit.org>
+
+        Adopt [PDFView documentScrollView]
+        https://bugs.webkit.org/show_bug.cgi?id=158454
+        rdar://problem/25875390
+
+        Reviewed by Tim Horton.
+
+        * WebView/PDFViewSPI.h: Added.
+        * WebView/WebPDFView.mm:
+        (-[WebPDFView _clipViewForPDFDocumentView]):
+
 2016-06-05  Anders Carlsson  <andersca@apple.com>
 
         Attempt to fix plug-in hangs by adding back empty slots for the removed messages.
